--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,15 @@ before_script:
   - cd october
   - composer self-update
   - travis_retry composer install --no-interaction --prefer-source
+  - cd plugins/vojtasvoboda/cnbrates
+  - composer install --dev
+  - cd ../../..
 
-script: vendor/bin/phpunit plugins/vojtasvoboda/cnbrates
+script: vendor/bin/phpunit plugins/vojtasvoboda/cnbrates --coverage-clover plugins/vojtasvoboda/cnbrates/build/logs/clover.xml
+
+after_script:
+  - plugins/vojtasvoboda/cnbrates/vendor/bin/test-reporter
 
 addons:
     code_climate:
-        repo_token: 00eb2d3ab61da3728242601ab6434d8b75dca5bd4445b5e22c1d2774b0f3384b
+        repo_token: 6459965ebd05b39e4374a1d294568a18ad1998098a7ce94cdf58bf9e11e7a44d
