--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,4 +12,4 @@ build:
     tests:
         override:
             -
-                command: ../../../vendor/bin/phpunit
+                command: php ../../../vendor/bin/phpunit
