--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,7 +15,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit --coverage-clover=coverage'
+                command: 'phpunit plugins/vojtasvoboda/cnbrates/tests --coverage-clover=coverage'
                 coverage:
                     file: 'coverage'
                     format: 'php-clover'
